Fixed the stupi alignment issues, it now flows into three fixed-content columns.

--- a/src/app/characters/character-generator/character-generator.component.css
+++ b/src/app/characters/character-generator/character-generator.component.css
@@ -6,8 +6,9 @@
     display: flex;
     flex-wrap: wrap;
     margin-left: 10%;
-    height: 950px;
+    height: 1000px;
     flex-flow: column wrap;
     justify-content: flex-start;
     align-items: flex-start;
+    width: 90%;
 }
